<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityExtended">

    <TextView
        android:id="@+id/playerLabel"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/player_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rollResultTextExt"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/click_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice3ImgExt" />

    <Button
        android:id="@+id/rollButtonExt"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollResultTextExt" />

    <ImageView
        android:id="@+id/dice1ImgExt"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="4dp"
        android:tintMode="multiply"
        app:layout_constraintEnd_toStartOf="@+id/dice2ImgExt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/dice2ImgExt"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="4dp"
        android:tintMode="multiply"
        app:layout_constraintEnd_toStartOf="@+id/dice3ImgExt"
        app:layout_constraintStart_toEndOf="@+id/dice1ImgExt"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/dice3ImgExt"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="4dp"
        android:tintMode="multiply"
        app:layout_constraintEnd_toStartOf="@+id/dice4ImgExt"
        app:layout_constraintStart_toEndOf="@+id/dice2ImgExt"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/dice4ImgExt"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="4dp"
        android:tintMode="multiply"
        app:layout_constraintEnd_toStartOf="@+id/dice5ImgExt"
        app:layout_constraintStart_toEndOf="@+id/dice3ImgExt"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_1" />

    <ImageView
        android:id="@+id/dice5ImgExt"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:tintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dice4ImgExt"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dice_1" />
</androidx.constraintlayout.widget.ConstraintLayout>